fix: scrollbar, nav and carousel

--- a/nst-fe/src/app/globals.css
+++ b/nst-fe/src/app/globals.css
@@ -12,26 +12,23 @@ html {
 	margin: 0;
 }
 
-body,
-html {
+* {
 	scrollbar-width: 0.5rem;
 	scrollbar-color: #9a8873 #161516;
 }
 
-body::-webkit-scrollbar,
-html::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: 0.5em;
 }
 
-body::-webkit-scrollbar-track,
-html::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
 	background-color: #161516;
+	border-radius: 30px;
 }
 
-body::-webkit-scrollbar-thumb,
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
 	background-color: #9a8873;
-	border-top: 30px;
+	border: 30px;
 }
 
 .embla {
